add fuzzy example